ParserTesterClean/ParserTesterClean/src/uniandes/teolen/parserJavaCC/myParser/ParserCAML.java
/* Generated By:JavaCC: Do not edit this line. ParserCAML.java */
package uniandes.teolen.parserJavaCC.myParser;

import java.util.*;

public class ParserCAML implements ParserCAMLConstants {
        ArrayList<Integer> valoresClaves = new ArrayList<Integer>();
        Integer articleTimes = 0;
        Integer articleErrors = 0;

  final public void hr() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        book();
        break;
        article();
        break;
        booklet();
        break;
        conference();
        break;
        inbook();
        break;
        incollection();
        break;
        inproceedings();
        break;
        manual();
        break;
        masterthesis();
        break;
        misc();
        break;
        phdthesis();
        break;
        proceedings();
        break;
        techreport();
        break;
        unpublished();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
        valoresClaves.add(articleTimes);
        valoresClaves.add(articleErros);
  }

  final public void book() throws ParseException {
    jj_consume_token(11);
    jj_consume_token(ID);
    jj_consume_token(12);
  }

  final public void article() throws ParseException {
    jj_consume_token(11);
    jj_consume_token(ID);
    jj_consume_token(12);
  }

  final public void booklet() throws ParseException {
    jj_consume_token(11);
    jj_consume_token(ID);
    jj_consume_token(12);
  }

  final public void conference() throws ParseException {
    jj_consume_token(11);
    jj_consume_token(ID);
    jj_consume_token(12);
  }

  final public void inbook() throws ParseException {
    jj_consume_token(11);
    jj_consume_token(ID);
    jj_consume_token(12);
  }

  final public void incollection() throws ParseException {
    jj_consume_token(11);
    jj_consume_token(ID);
    jj_consume_token(12);
  }

  final public void inproceedings() throws ParseException {
    jj_consume_token(11);
    jj_consume_token(ID);
    jj_consume_token(12);
  }

  final public void manual() throws ParseException {
    jj_consume_token(11);
    jj_consume_token(ID);
    jj_consume_token(12);
  }

  final public void masterthesis() throws ParseException {
    jj_consume_token(11);
    jj_consume_token(ID);
    jj_consume_token(12);
  }

  final public void misc() throws ParseException {
    jj_consume_token(11);
    jj_consume_token(ID);
    jj_consume_token(12);
  }

  final public void phdthesis() throws ParseException {
    jj_consume_token(11);
    jj_consume_token(ID);
    jj_consume_token(12);
  }

  final public void proceedings() throws ParseException {
    jj_consume_token(11);
    jj_consume_token(ID);
    jj_consume_token(12);
  }

  final public void techreport() throws ParseException {
    jj_consume_token(11);
    jj_consume_token(ID);
    jj_consume_token(12);
  }

  final public void unpublished() throws ParseException {
    jj_consume_token(11);
    jj_consume_token(ID);
    jj_consume_token(12);
  }

  /** Generated Token Manager. */
  public ParserCAMLTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[2];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x800,0x800,};
   }

  /** Constructor with InputStream. */
  public ParserCAML(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ParserCAML(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ParserCAMLTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public ParserCAML(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ParserCAMLTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public ParserCAML(ParserCAMLTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ParserCAMLTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[13];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 2; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 13; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
